--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ charset-normalizer==2.0.12
 Django==3.2
 django-filter==23.2
 djangorestframework==3.12.4
-djangorestframework-simplejwt==5.3.0
+djangorestframework-simplejwt
 idna==3.4
 iniconfig==2.0.0
 packaging==23.1
@@ -22,3 +22,4 @@ sqlparse==0.4.4
 toml==0.10.2
 typing_extensions==4.7.1
 urllib3==1.26.16
+djoser
